Wed Feb 21 09:10:13 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/variables.c libxslt/xsltInternals.h:
	  fixed the param evaluation problem in apply-template
	* libxslt/pattern.c: speed up seriously some context computation
	* libxslt/xsltInternals.h: preparing for extension support
	  
Mon Feb 19 19:34:59 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: small cleanup
	* libxslt/functions.c libxslt/transform.c libxslt/xsltInternals.h:
	  fixed current() I hope

Mon Feb 19 18:05:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c libxslt/numbersInternals.h libxslt/xslt.c
	  libxslt/pattern.[ch] libxslt/xsltInternals.h:  more work on
	  support of namespaces, both in templates and in XPath subexpressions

Sun Feb 18 19:11:26 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/xsltutils.c: xsltSortFunction uses Shell's sort

Sun Feb 18 17:13:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: when precompiled pattern is ALL, predicate
	  contextual info must be recomputed

Sun Feb 18 16:39:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.h libxslt/transform.c: defined and exported xsltMaxDepth
	* libxslt/xsltproc.c : added --maxdepth

Sun Feb 18 15:44:33 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: added --novalid and --noout as well
	  as options printing when no args
	* libxslt/variables.c libxslt/transform.c: trying to get rid
	  if some variable/params addressing errors.

Sat Feb 17 14:27:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/attributes.c: fixed use-attribute-sets
	* libxslt/xsltutils.c: add carriage return to xsl:message when
	  needed

Sat Feb 17 02:25:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c: fixed a bug with generate-id()

Sat Feb 17 00:51:53 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
