@@ -209,8 +209,6 @@ struct _xsltTransformContext {
     int               varsNr;		/* Nb of variable list in the stack */
     int               varsMax;		/* Size of the variable list stack */
     xsltStackElemPtr *varsTab;		/* the variable list stack */
-    int               varsComputed;     /* switched during param template
-					   evaluation */
 
     /*
      * Extensions
